[workspace]
resolver = "3"
members = ["inator"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[workspace.dependencies]
bevy = { version = "0.16.1" , features = ["dynamic_linking"] }
log = { version = "0.4.27", features = ["max_level_debug", "release_max_level_warn"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16" }
typetag = { version = "0.2.20" }
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }