[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bevy = { workspace = true }
inator = { path = "../../inator" }
serde = { workspace = true }
bincode = { workspace = true }
bevy-inspector-egui = { version = "0.35.0" }
message_derive = { path = "../../message_derive" }
component_replicated_derive = { path = "../../component_replicated_derive" }